[gd_scene load_steps=8 format=2]

[ext_resource path="res://lobby.gd" type="Script" id=1]
[ext_resource path="res://main/img/molot.png" type="Texture" id=2]
[ext_resource path="res://main/img/sword.png" type="Texture" id=3]
[ext_resource path="res://main/img/eye.png" type="Texture" id=4]

[sub_resource type="DynamicFontData" id=1]
override_oversampling = 5.0
font_path = "res://main/font/COMIC.TTF"

[sub_resource type="DynamicFont" id=3]
font_data = SubResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 3 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = SubResource( 2 )
script = ExtResource( 1 )

[node name="Players" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.0
margin_top = -177.5
margin_right = 126.0
margin_bottom = 177.5
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Label" type="Label" parent="Players"]
margin_left = 26.0
margin_top = 18.0
margin_right = 142.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Awaiting Players..."

[node name="Start" type="Button" parent="Players"]
margin_left = 68.0
margin_top = 307.0
margin_right = 193.0
margin_bottom = 336.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "START!"

[node name="watch" type="Button" parent="Players"]
margin_left = 142.0
margin_top = -34.0
margin_right = 252.0
margin_bottom = -5.0
text = "watch"
icon = ExtResource( 4 )
expand_icon = true

[node name="List" type="ItemList" parent="Players"]
margin_left = 25.0
margin_top = 37.0
margin_right = 229.0
margin_bottom = 296.0
size_flags_horizontal = 2
size_flags_vertical = 2
fixed_icon_size = Vector2( 25, 25 )

[node name="PortForward" type="Label" parent="Players"]
visible = false
margin_left = -124.0
margin_top = 375.0
margin_right = 128.0
margin_bottom = 429.0
custom_constants/line_spacing = 6
text = "If you want non-LAN clients to connect,
make sure the port 10567 in UDP
is forwarded on your router."
align = 1

[node name="FindPublicIP" type="LinkButton" parent="Players"]
visible = false
margin_left = 168.0
margin_top = 393.5
margin_right = 341.0
margin_bottom = 407.5
text = "Find your public IP address"

[node name="show_charters" type="Button" parent="Players"]
margin_top = -34.5
margin_right = 128.0
margin_bottom = -5.9
text = "choice charter"

[node name="c1" type="Panel" parent="Players"]
margin_left = -194.0
margin_right = -26.0
margin_bottom = 356.0

[node name="l" type="ItemList" parent="Players/c1"]
margin_left = 8.0
margin_top = 54.0
margin_right = 160.0
margin_bottom = 297.0
fixed_icon_size = Vector2( 25, 25 )

[node name="t" type="RichTextLabel" parent="Players/c1"]
margin_left = 40.0
margin_top = -0.5
margin_right = 124.0
margin_bottom = 23.5
text = "command 1"
scroll_active = false

[node name="m" type="TextureRect" parent="Players/c1"]
margin_left = 8.0
margin_top = 23.5
margin_right = 33.0
margin_bottom = 48.5
texture = ExtResource( 2 )
expand = true

[node name="t" type="RichTextLabel" parent="Players/c1/m"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_right = 39.0
text = "0|1"
scroll_active = false

[node name="w" type="TextureRect" parent="Players/c1"]
margin_left = 80.0
margin_top = 23.5
margin_right = 105.0
margin_bottom = 48.5
texture = ExtResource( 3 )
expand = true

[node name="t" type="RichTextLabel" parent="Players/c1/w"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_right = 39.0
text = "0|4"
scroll_active = false

[node name="c1b" type="Button" parent="Players/c1"]
margin_left = 32.0
margin_top = 307.5
margin_right = 136.0
margin_bottom = 339.5
text = "be there"

[node name="c2" type="Panel" parent="Players"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 26.0
margin_right = 194.0
margin_bottom = 356.0

[node name="l" type="ItemList" parent="Players/c2"]
margin_left = 8.0
margin_top = 54.0
margin_right = 160.0
margin_bottom = 297.0
fixed_icon_size = Vector2( 25, 25 )

[node name="t" type="RichTextLabel" parent="Players/c2"]
margin_left = 40.0
margin_top = -0.5
margin_right = 124.0
margin_bottom = 23.5
text = "command 2"
scroll_active = false

[node name="m" type="TextureRect" parent="Players/c2"]
margin_left = 8.0
margin_top = 23.5
margin_right = 33.0
margin_bottom = 48.5
texture = ExtResource( 2 )
expand = true

[node name="t" type="RichTextLabel" parent="Players/c2/m"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_right = 39.0
text = "0|1"
scroll_active = false

[node name="w" type="TextureRect" parent="Players/c2"]
margin_left = 80.0
margin_top = 23.5
margin_right = 105.0
margin_bottom = 48.5
texture = ExtResource( 3 )
expand = true

[node name="t" type="RichTextLabel" parent="Players/c2/w"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_right = 39.0
text = "0|4"
scroll_active = false

[node name="c2b" type="Button" parent="Players/c2"]
margin_left = 32.0
margin_top = 307.5
margin_right = 136.0
margin_bottom = 339.5
text = "be there"

[node name="Connect" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.5
margin_top = -83.5
margin_right = 138.5
margin_bottom = 83.5
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="NameLabel" type="Label" parent="Connect"]
margin_left = 14.0
margin_top = 11.0
margin_right = 56.0
margin_bottom = 25.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Name:"

[node name="Name" type="LineEdit" parent="Connect"]
margin_left = 17.0
margin_top = 30.0
margin_right = 173.0
margin_bottom = 54.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "The Warrior"

[node name="IPLabel" type="Label" parent="Connect"]
margin_left = 15.0
margin_top = 66.0
margin_right = 57.0
margin_bottom = 80.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "IP:"

[node name="IPAddress" type="LineEdit" parent="Connect"]
margin_left = 17.0
margin_top = 85.0
margin_right = 173.0
margin_bottom = 109.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"

[node name="Host" type="Button" parent="Connect"]
margin_left = 181.0
margin_top = 31.0
margin_right = 246.0
margin_bottom = 51.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"

[node name="Join" type="Button" parent="Connect"]
margin_left = 181.0
margin_top = 87.0
margin_right = 246.0
margin_bottom = 107.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"

[node name="ErrorLabel" type="Label" parent="Connect"]
margin_left = 15.0
margin_top = 125.0
margin_right = 257.0
margin_bottom = 139.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 55.0
margin_bottom = 58.0
size_flags_horizontal = 2
size_flags_vertical = 2
window_title = "Внимание!"

[node name="charters" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -182.0
margin_right = 256.0
margin_bottom = 182.0

[node name="show_players" type="Button" parent="charters"]
margin_left = -96.0
margin_top = 5.0
margin_right = -16.0
margin_bottom = 39.0
text = "back"

[node name="hrs" type="Control" parent="charters"]
margin_right = 40.0
margin_bottom = 40.0

[connection signal="pressed" from="Players/Start" to="." method="_on_start_pressed"]
[connection signal="button_down" from="Players/watch" to="." method="_on_watch_button_down"]
[connection signal="pressed" from="Players/FindPublicIP" to="." method="_on_find_public_ip_pressed"]
[connection signal="button_down" from="Players/show_charters" to="." method="_on_show_charters_button_down"]
[connection signal="button_down" from="Players/c1/c1b" to="." method="_on_c1b_button_down"]
[connection signal="button_down" from="Players/c2/c2b" to="." method="_on_c2b_button_down"]
[connection signal="pressed" from="Connect/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_join_pressed"]
[connection signal="button_down" from="charters/show_players" to="." method="_on_show_players_button_down"]
